ingress/svc-external-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: cert-manager-demo-for-external-ingress
  namespace: default
  annotations:
    cloud.google.com/backend-config: '{"default": "cert-manager-demo-external-ingress-security"}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: cert-manager-demo
    repo: none
    product: demo
---
apiVersion: v1
kind: Service
metadata:
  name: cert-manager-demo-v2-for-external-ingress
  namespace: default
  annotations:
    cloud.google.com/backend-config: '{"default": "cert-manager-demo-external-ingress-security"}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: cert-manager-demo-v2
    repo: none
    product: demo
